Рефакторинг: подготовка к добавлению Telegram-канала
Устраняем архитектурные и качественные проблемы, выявленные в ходе ревью, чтобы Telegram-канал лёг в уже выровненную базу.

- JsonUtil — вынесена общая утилита JSON-экранирования в ru.my.impl.util. Теперь корректно экранируются все управляющие символы U+0000–U+001F согласно RFC 8259, а не только \n, \r, \t. MattermostClient переключён на JsonUtil; тест покрытия переехал в JsonUtilTest с расширенными кейсами.
- ChannelKeys — единственный источник правды для строковых ключей настроек каналов (mattermost.domain, mattermost.token, mattermost.botId, telegram.botToken). MattermostClient и AdminSettingsResource теперь ссылаются на константы вместо литералов — опечатка при добавлении нового канала станет ошибкой компиляции.
- MattermostClient — HttpClient переведён из статического поля в instance-поле, инициализируемое в конструкторе. Статическое поле создавалось до инициализации Spring-бина.
- AdminSettingsServiceImpl — добавлен Guava Cache с TTL 60 секунд. Каждый вызов isChannelEnabled раньше шёл в БД; при пакетных событиях в Jira это давало N×3 запросов в AO. Кеш инвалидируется при set().
- UserSettingsServiceImpl — Collectors.toList() заменён на .toList() (Java 16+) в parseList и parseChannels.
- DelegationInfo / DelegationService / DelegationServiceImpl — java.util.Date заменён на java.time.Instant. Конвертация Date ↔ Instant вынесена на границу AO-слоя. isActive() использует Instant.now() вместо new Date(). getEffectiveRecipient — .map() заменён на .flatMap(Optional.ofNullable(...)) для явной обработки null от userManager.getUserByKey().